<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sanguio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_login">Login</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_password_confirm">Password confirm</string>
    <string name="lbl_blood_type">Your blood type: </string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_pass_forgot">Forgot password</string>
    <string name="lbl_login_twitter">Login with Twitter</string>
    <string name="lbl_rank">Rank:</string>
    <string name="lbl_points">Points:</string>
    <string name="lbl_donations_year">Donations in past year</string>
    <string name="lbl_your_donations">Your donations: </string>
    <string name="lbl_donor_card">Sangrio donor card</string>
    <string name="lbl_points_2">Points:</string>
    <string name="lbl_id">Id:</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_language_type">Select language</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_splash">Share,Love,Donate</string>
    <string name="lbl_err_msg_network">There seems to be a problem with your network</string>
    <string name="lbl_error_error">Error</string>
    <string name="lbl_submit_2">Submit</string>
    <string name="lbl_change_pass">CHANGE YOUR PASSWORD</string>
    <string name="lbl_notice">The password for your account will be sent to this email:</string>
    <string name="lbl_pass_reset_confirm">The password has been sent to your e-mail address</string>
    <string name="lbl_tajtl">Password reset confirmation</string>
    <string name="lbl_donated">Donated:</string>
    <string name="lbl_mills">Milliliters:</string>
    <string name="lbl_my_profile">My profile</string>
    <string name="lbl_my_donations">My donations</string>
    <string name="lbl_where_can_donate">Where can I donate?</string>
    <string name="lbl_share">Share</string>
</resources>
