<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etFirstName"
            android:hint="@string/lbl_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/lbl_last_name"
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:hint="@string/lbl_email"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPassword"
            android:inputType="textWebPassword"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:hint="@string/lbl_password"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textWebPassword"
            android:id="@+id/etPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:hint="@string/lbl_password_confirm"
            android:layout_height="wrap_content" />

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/lbl_blood_type"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spBloodType"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </TableRow>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnRegister"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:text="@string/lbl_register"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>