<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        style="@style/CardTitle"
        android:text="@string/lbl_change_pass"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/CardLabel"
        android:layout_marginTop="@dimen/md_20"
        android:layout_marginLeft="@dimen/md_10"
        android:layout_marginRight="@dimen/md_10"
        android:text="@string/lbl_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_margin="@dimen/md_10"
        android:id="@+id/etEmail"
        style="@style/EditText"
        android:inputType="textEmailAddress"
        android:hint="@string/lbl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/btnReset"
        android:layout_marginTop="@dimen/md_10"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:text="@string/lbl_submit_2"
        android:layout_height="wrap_content" />

</LinearLayout>